Add test for trips
